# SimplePowerProfiler

./: README.md
source/BL702/PowerProfiler/: .cproject  .project  CMakeLists.txt
source/BL702/PowerProfiler/SDK/: project.build
source/BL702/PowerProfiler/src/: adc_dma.c  adc_dma.h  cdc_acm_template.c  cmd_cfg.h  cmd_decode.c  dac_dma.c  i2c_dev.c  i2c_dev.h  i2cbus.c  i2cbus.h  main.c  main_config.h  ring_buffer.c  ring_buffer.h  usb_buffer.c  usb_buffer.h  usb_config.h
source/Delphi7/: Ina219_r_config.pas  Ina3221_r_config.pas  MainFrm.dfm  MainFrm.pas  PowerProfiler.dof  PowerProfiler.dpr  PowerProfiler.res  adc_bl702_config.dfm  adc_bl702_config.pas
source/INA228_229/BL702/PowerProfiler_ina229/: .project  CMakeLists.txt  Makefile  clean_win.cmd  flash_erase.cmd  flash_win.cmd  make_win.cmd  proj.conf
source/INA228_229/BL702/PowerProfiler_ina229/src/: adc_dma.c  adc_dma.h  cdc_acm_template.c  cmd_cfg.h  cmd_decode.c  i2c_dev.c  ina229.c  ina229.h  main.c  main_config.h  usb_buffer.c  usb_buffer.h
source/INA228_229/Delphi7/: MainFrm.dfm  MainFrm.pas  PowerProfiler.dof  PowerProfiler.dpr  PowerProfiler.res  adc_bl702_config.dfm  adc_bl702_config.pas
source/STM32F103/: JLinkLog.txt  VCP_STLINK.uvguix.pvvx  VCP_STLINK.uvoptx  VCP_STLINK.uvprojx
source/ch583/I2C2USB/: .cproject  .project  .template  I2C2USB.wvproj
source/ch583/I2C2USB/StdPeriphDriver/: CH58x_i2c.c
source/ch583/I2C2USB/src/: Main.c  app_drv_fifo.c  app_usb.c  app_usb.h  cmd_cfg.h  cmd_decode.c  common.h  crc16.c  crc16.h  i2c_dev.c  i2c_dev.h  (+4 more)
source/ch583/WEB_USB/: wso_ina3221.htm
(+6 files in other folders)
